--- a/exercises/01.elements/01.problem.reuse/README.mdx
+++ b/exercises/01.elements/01.problem.reuse/README.mdx
@@ -1,5 +1,7 @@
 # Reusing Elements
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/reusing-elements" />
+
 👨‍💼 We're going to be building a simple user interface and in the process we want
 to limit unnecessary renders as much as possible (not because it's necessary
 for this specific application, but because it's a useful exercise for you to
