--- a/exercises/01.elements/01.solution.reuse/README.mdx
+++ b/exercises/01.elements/01.solution.reuse/README.mdx
@@ -1,4 +1,6 @@
 # Reusing Elements
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/reusing-elements/solution" />
+
 👨‍💼 Great! Now we're not unnecessarily rendering the `Footer` component. But
 let's complicate things a little bit more...
