--- a/exercises/01.elements/02.problem.props/README.mdx
+++ b/exercises/01.elements/02.problem.props/README.mdx
@@ -1,5 +1,7 @@
 # Element Props
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/element-props" />
+
 🧝‍♂️ I've enhanced our app a bit to add some buttons that will control the color
 of our footer. This means we can't just render the component outside the `App`
 component since we need to pass the `color` as a prop. Feel free
