--- a/exercises/01.elements/02.solution.props/README.mdx
+++ b/exercises/01.elements/02.solution.props/README.mdx
@@ -1,5 +1,7 @@
 # Element Props
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/element-props/solution" />
+
 👨‍💼 Great! So we can still make dynamic elements that are positioned where we
 want them to be without allowing them to be rerendered with every state change
 by passing them as props! This is the composition pattern from the Advanced
