--- a/exercises/01.elements/03.problem.context/README.mdx
+++ b/exercises/01.elements/03.problem.context/README.mdx
@@ -1,5 +1,7 @@
 # Context
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/context" />
+
 👨‍💼 We now have a counter inside the `App` component and every time that count is
 incremented, we trigger a rerender of the `Footer` component! Have we lost the
 ability to take advantage of React's element optimization? No!
