--- a/exercises/01.elements/03.solution.context/README.mdx
+++ b/exercises/01.elements/03.solution.context/README.mdx
@@ -1,4 +1,6 @@
 # Context
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/context/solution" />
+
 👨‍💼 Interesting that we can manage to really take this optimization with React
 elements so far huh? Well, let's try another one...
