--- a/exercises/01.elements/04.problem.use-memo/README.mdx
+++ b/exercises/01.elements/04.problem.use-memo/README.mdx
@@ -1,5 +1,7 @@
 # Memoize Elements
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/memoize-elements" />
+
 👨‍💼 Now we want our users to be able to type their name and have that show up in
 the footer. But we don't want to use context for the name like we do with the
 color just yet. We just want to be able to pass the `name` as a regular prop.
