--- a/exercises/01.elements/04.solution.use-memo/README.mdx
+++ b/exercises/01.elements/04.solution.use-memo/README.mdx
@@ -1,5 +1,7 @@
 # Memoize Elements
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/memoize-elements/solution" />
+
 👨‍💼 This is a bit of an unconventional approach to optimizing things, but it's
 cool to understand how all this works and see how far we can take this
 optimization that's built-into React! Let's take this a bit further with
