--- a/exercises/01.elements/05.problem.memo/README.mdx
+++ b/exercises/01.elements/05.problem.memo/README.mdx
@@ -1,5 +1,7 @@
 # Memoize Components
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/memoize-components" />
+
 🦉 Memoizing elements is such a common idea that React has a built-in optimizer
 called `memo` which allows you to memoize an entire component based on its
 props:
