--- a/exercises/01.elements/05.solution.memo/README.mdx
+++ b/exercises/01.elements/05.solution.memo/README.mdx
@@ -1,5 +1,7 @@
 # Memoize Components
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/memoize-components/solution" />
+
 👨‍💼 Great work!
 
 🦉 What's interesting is we could actually move the `Footer` to be rendered
