--- a/exercises/01.elements/FINISHED.mdx
+++ b/exercises/01.elements/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Element Optimization
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/dad-joke-break-element-optimization" />
+
 👨‍💼 Great work! You've really explored React's element optimization a lot in this
 exercise and hopefully it informs how you structure your components going
 forward.
