--- a/exercises/01.elements/README.mdx
+++ b/exercises/01.elements/README.mdx
@@ -1,5 +1,7 @@
 # Element Optimization
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/intro-to-element-optimization" />
+
 Elements are the fundamentals building blocks of React UI. It was the first
 we started with when you started learning React in this workshop series. And
 React has some smarts under the hood we can take advantage of when we're
