--- a/exercises/02.context/01.problem.memo-context/README.mdx
+++ b/exercises/02.context/01.problem.memo-context/README.mdx
@@ -1,5 +1,7 @@
 # Memoize Context
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/memoize-context" />
+
 🧝‍♂️ I've taken the `name` and `color` state and combined them into a single
 `FooterContext` as well as extracted some of the UI into a `FooterSetters`
 component (for all the stuff that allows you to control the `Footer`). Feel free
