--- a/exercises/02.context/01.solution.memo-context/README.mdx
+++ b/exercises/02.context/01.solution.memo-context/README.mdx
@@ -1,4 +1,6 @@
 # Memoize Context
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/memoize-context/solution" />
+
 👨‍💼 Super duper! You've been able to keep our components rerendering only when
 necessary again. Well done.
