--- a/exercises/02.context/02.problem.provider-component/README.mdx
+++ b/exercises/02.context/02.problem.provider-component/README.mdx
@@ -1,5 +1,7 @@
 # Provider Component
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/provider-component" />
+
 👨‍💼 We've noticed that when we change some of the Footer context stuff, we're
 actually rerendering the `App` and `Main` components even though those don't
 have anything to do with the Footer context.
