--- a/exercises/02.context/02.solution.provider-component/README.mdx
+++ b/exercises/02.context/02.solution.provider-component/README.mdx
@@ -1,5 +1,7 @@
 # Provider Component
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/provider-component/solution" />
+
 👨‍💼 Great work! You've eliminated more unnecessary rerenders!
 
 🦉 This is a really common pattern in the React community. It's kind of natural.
