--- a/exercises/02.context/03.problem.split-context/README.mdx
+++ b/exercises/02.context/03.problem.split-context/README.mdx
@@ -1,5 +1,7 @@
 # Split Context
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/split-context" />
+
 👨‍💼 Something you may have noticed is that the `FooterSetters` component is
 rerendering whenever the footer state changes, but that component doesn't
 actually depend on the footer state at all. All it cares about is the setter
