--- a/exercises/02.context/FINISHED.mdx
+++ b/exercises/02.context/FINISHED.mdx
@@ -1,4 +1,6 @@
 # Optimize Context
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/dad-joke-break-optimize-context" />
+
 👨‍💼 Great work! You now have some great context optimizations in your back
 pocket to use whenever you run into performance problems (and not before!!).
