--- a/exercises/02.context/README.mdx
+++ b/exercises/02.context/README.mdx
@@ -1,5 +1,7 @@
 # Optimize Context
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/intro-to-optimize-context" />
+
 The way that context works is that whenever the provided value changes from one
 render to another, it triggers a re-render of all the consuming components
 (which will re-render whether or not they're memoized).
