--- a/exercises/03.concurrent-rendering/01.solution.deferred/README.mdx
+++ b/exercises/03.concurrent-rendering/01.solution.deferred/README.mdx
@@ -1,5 +1,7 @@
 # useDeferredValue + memo
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/usedeferredvalue-and-memo/solution" />
+
 👨‍💼 Great work! You've managed to drastically improve this user experience by
 making the UI responsive even when rerendering the cards is slow. All with a
 simple `memo` and a `useDeferredValue`. Great job!
