--- a/exercises/03.concurrent-rendering/FINISHED.mdx
+++ b/exercises/03.concurrent-rendering/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Concurrent Rendering
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/dad-joke-break-concurrent-rendering" />
+
 👨‍💼 React managed to provide this feature to developers by re-writing the
 internals of React while avoiding huge breaking changes to developer's apps.
 Really impressive! And now you know how to take advantage of `useDeferredValue`
