--- a/exercises/03.concurrent-rendering/README.mdx
+++ b/exercises/03.concurrent-rendering/README.mdx
@@ -1,5 +1,7 @@
 # Concurrent Rendering
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/concurrent-rendering-intro" />
+
 Sometimes, you're rendering so many components or those components are doing
 such complex things that you can't afford to render them all quickly enough.
 
