--- a/exercises/04.code-splitting/01.problem.lazy/README.mdx
+++ b/exercises/04.code-splitting/01.problem.lazy/README.mdx
@@ -1,5 +1,7 @@
 # lazy
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/lazy" />
+
 👨‍💼 Our app has a neat Globe component that shows the user where they are on the
 globe. Cool right? It's super duper fun.
 
