--- a/exercises/04.code-splitting/01.solution.lazy/README.mdx
+++ b/exercises/04.code-splitting/01.solution.lazy/README.mdx
@@ -1,5 +1,7 @@
 # lazy
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/lazy/solution" />
+
 👨‍💼 Great! That makes our initial page load **much** lighter than before. Based
 on my count in the development environment, we've gone from 2.0 MB JavaScript
 downloaded to 1.4 MB. That's a 30% reduction in the amount of JavaScript we're
