--- a/exercises/04.code-splitting/02.problem.eager/README.mdx
+++ b/exercises/04.code-splitting/02.problem.eager/README.mdx
@@ -1,5 +1,7 @@
 # Eager Loading
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/eager-loading" />
+
 👨‍💼 So it's great that the users can get the app loaded faster, but it's annoying
 when 99% of the time the reason the users are using the app is so they can
 interact with our globe. We don't want to have to make them wait first to load
