--- a/exercises/04.code-splitting/02.solution.eager/README.mdx
+++ b/exercises/04.code-splitting/02.solution.eager/README.mdx
@@ -1,5 +1,7 @@
 # Eager Loading
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/eager-loading/solution" />
+
 👨‍💼 Great. Now we're loading it a bit sooner. In general, this is a helpful
 practice to reduce the amount of time between when the user indicates they want
 to see something and when they actually see it.
