--- a/exercises/04.code-splitting/03.problem.transition/README.mdx
+++ b/exercises/04.code-splitting/03.problem.transition/README.mdx
@@ -1,5 +1,7 @@
 # Transitions
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/transitions" />
+
 👨‍💼 By default, when a component suspends (like our `lazy` component is while
 we're lazy-loading some code), React will render the fallback of our suspense
 boundary immediately. Go ahead and try it now. Hover over the checkbox for long
