--- a/exercises/04.code-splitting/03.solution.transition/README.mdx
+++ b/exercises/04.code-splitting/03.solution.transition/README.mdx
@@ -1,4 +1,6 @@
 # Transitions
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/transitions/solution" />
+
 👨‍💼 React gives us lots of options to control the user experience we're after
 while also optimizing things for performance. Great work on this one!
