--- a/exercises/04.code-splitting/FINISHED.mdx
+++ b/exercises/04.code-splitting/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Code Splitting
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/dad-joke-break-code-splitting" />
+
 👨‍💼 Great job! You've successfully added code splitting for a part of the app
 that is particularly "heavy." This will help reduce the initial load time of
 your app and improve the user experience.
