--- a/exercises/05.calculations/01.problem.use-memo/README.mdx
+++ b/exercises/05.calculations/01.problem.use-memo/README.mdx
@@ -1,5 +1,7 @@
 # useMemo
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/usememo" />
+
 👨‍💼 We have a combobox that's calling `searchCities` every render. This function
 is really slow because it's attempting to intelligently sort thousands of items
 based on the user's filter input.
