--- a/exercises/05.calculations/01.solution.use-memo/README.mdx
+++ b/exercises/05.calculations/01.solution.use-memo/README.mdx
@@ -1,5 +1,7 @@
 # useMemo
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/usememo/solution" />
+
 👨‍💼 Wow! That's a significant improvement!
 
 🦉 Even with this improvement, it seems like React is doing a lot of extra work
