--- a/exercises/05.calculations/02.problem.worker/README.mdx
+++ b/exercises/05.calculations/02.problem.worker/README.mdx
@@ -1,5 +1,7 @@
 # Web Worker
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/web-worker" />
+
 <callout-warning>
 	Warning, this one's _really_ cool, but kinda tricky... Also, the intent isn't
 	necessarily for you to learn about [web
