--- a/exercises/05.calculations/03.problem.async/README.mdx
+++ b/exercises/05.calculations/03.problem.async/README.mdx
@@ -1,5 +1,7 @@
 # Async Results
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/async-results" />
+
 👨‍💼 Now that we have a web worker we can work with, let's refactor our `App` to
 use this new async data source. We'll be using React's `use` hook and passing
 a promise to that. This means we'll want to have state for the promises of data
