--- a/exercises/05.calculations/README.mdx
+++ b/exercises/05.calculations/README.mdx
@@ -1,5 +1,7 @@
 # Expensive Calculations
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/intro-to-expensive-calculations" />
+
 React hooks are amazing. Being able to put all the logic and state management
 within a function component allows for mind blowing composability.
 
