--- a/exercises/06.rerenders/01.problem.memo/README.mdx
+++ b/exercises/06.rerenders/01.problem.memo/README.mdx
@@ -1,5 +1,7 @@
 # Component Memoization
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/component-memoization" />
+
 👨‍💼 We've got a problem. Here's how you reproduce it in our component.
 
 In this exercise, pull up the React DevTools Profiler and start a recording.
