--- a/exercises/06.rerenders/01.solution.memo/README.mdx
+++ b/exercises/06.rerenders/01.solution.memo/README.mdx
@@ -1,5 +1,7 @@
 # Component Memoization
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/component-memoization/solution" />
+
 👨‍💼 Great job! You've managed to really improve the performance of our list when
 unrelated updates occur. But what if there are updates to the list itself?
 Hmm...
