--- a/exercises/06.rerenders/02.problem.comparator/README.mdx
+++ b/exercises/06.rerenders/02.problem.comparator/README.mdx
@@ -1,5 +1,7 @@
 # Custom Comparator
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/custom-comparator" />
+
 👨‍💼 We've improved things so the `ListItem` components don't rerender when there
 are unrelated changes, but what if there are changes to the list item state?
 
