--- a/exercises/06.rerenders/02.solution.comparator/README.mdx
+++ b/exercises/06.rerenders/02.solution.comparator/README.mdx
@@ -1,4 +1,6 @@
 # Custom Comparator
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/custom-comparator/solution" />
+
 👨‍💼 Great! The performance is better! Unfortunately, that custom comparator is
 kinda complex. I wonder if we could simplify it a bit...
