--- a/exercises/06.rerenders/03.problem.primitives/README.mdx
+++ b/exercises/06.rerenders/03.problem.primitives/README.mdx
@@ -1,5 +1,7 @@
 # Primitives
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/primitives" />
+
 👨‍💼 I would love to have the performance improvement without all the complexity
 of the custom comparator function.
 
