--- a/exercises/06.rerenders/FINISHED.mdx
+++ b/exercises/06.rerenders/FINISHED.mdx
@@ -1,4 +1,6 @@
 # Optimize Rendering
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/dad-joke-break-optimize-rendering" />
+
 👨‍💼 When you find yourself rendering a ton of the same component, optimizing that
 one component can have an outsized impact on performance. Good job!
