--- a/exercises/06.rerenders/README.mdx
+++ b/exercises/06.rerenders/README.mdx
@@ -1,5 +1,7 @@
 # Optimize Rendering
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/intro-to-optimize-rendering" />
+
 Here's the lifecycle of a React app:
 
 ![→ render → reconciliation → commit → state change → rerender](/img/react-render-cycle.png)
