--- a/exercises/07.windowing/01.problem.virtualizer/README.mdx
+++ b/exercises/07.windowing/01.problem.virtualizer/README.mdx
@@ -1,5 +1,7 @@
 # Virtualizer
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/virtualizer" />
+
 Hover over one of the items with CPU 6x throttle and it's crazy slow despite
 only re-rendering the ListItem
 
