--- a/exercises/07.windowing/01.solution.virtualizer/README.mdx
+++ b/exercises/07.windowing/01.solution.virtualizer/README.mdx
@@ -1,4 +1,6 @@
 # Virtualizer
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/virtualizer/solution" />
+
 👨‍💼 Great job! Even with returning all of the results and slowing down the CPU to
 6x, we're still getting great performance on this list. Well done 👏👏
