--- a/exercises/07.windowing/FINISHED.mdx
+++ b/exercises/07.windowing/FINISHED.mdx
@@ -1,5 +1,7 @@
 # Windowing
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/dad-joke-break-windowing" />
+
 👨‍💼 You did it! Great work on improving the performance of this component!
 
 🦉 One thing you should know about virtualization is that ⌘+F (or on
