--- a/exercises/07.windowing/README.mdx
+++ b/exercises/07.windowing/README.mdx
@@ -1,5 +1,7 @@
 # Windowing
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/intro-to-windowing" />
+
 <callout-info class="aside">
 	NOTE: We're going to be using a library called
 	[`@tanstack/react-virtual`](https://npm.im/@tanstack/react-virtual). Some of
