--- a/exercises/FINISHED.mdx
+++ b/exercises/FINISHED.mdx
@@ -1,5 +1,7 @@
 # React Performance ⚡
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/react-performance-outro-v2" />
+
 👨‍💼 Congratulations! You've finished this workshop and you did an awesome job.
 There's still so much more we can do to improve performance of our applications,
 but you've now been given the tools to analyze and improve your own
