--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -1,5 +1,7 @@
 # React Performance ⚡
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/react-performance-intro" />
+
 👨‍💼 Hello, my name is Peter the Product Manager. I'm here to help you get
 oriented and to give you your assignments for the workshop!
 
