--- a/exercises/03.concurrent-rendering/01.problem.deferred/README.mdx
+++ b/exercises/03.concurrent-rendering/01.problem.deferred/README.mdx
@@ -1,5 +1,7 @@
 # useDeferredValue + memo
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/usedeferredvalue-and-memo" />
+
 👨‍💼 We've got a performance problem with our `Card` component in this UI. (🧝‍♂️
 actually, I just added an arbitrary slowdown to simulate a problem to keep this
 exercise simple while still teaching the lesson). As a result, every time we
