--- a/exercises/04.code-splitting/README.mdx
+++ b/exercises/04.code-splitting/README.mdx
@@ -1,5 +1,7 @@
 # Code Splitting
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/intro-to-code-splitting" />
+
 Code splitting acts on the principle that loading less code will speed up your
 app. Say for example that we're building a complex dashboard application that
 includes the venerable d3 library for graphing data. Your users start
