--- a/exercises/05.calculations/02.solution.worker/README.mdx
+++ b/exercises/05.calculations/02.solution.worker/README.mdx
@@ -1,3 +1,5 @@
 # Web Worker
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/web-worker/solution" />
+
 👨‍💼 Great! Now we're ready for the next step.
