--- a/exercises/05.calculations/03.solution.async/README.mdx
+++ b/exercises/05.calculations/03.solution.async/README.mdx
@@ -1,5 +1,7 @@
 # Async Results
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/async-results/solution" />
+
 👨‍💼 Great job! Now if you take some measurements with the dev tools, you'll
 notice that doing searches is much faster than before. Offloading this work is
 a nice improvement!
