--- a/exercises/05.calculations/FINISHED.mdx
+++ b/exercises/05.calculations/FINISHED.mdx
@@ -1,4 +1,6 @@
 # Expensive Calculations
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/dad-joke-break-expensive-calculations" />
+
 👨‍💼 Great work! Sometimes you're just doing expensive stuff. It's cool that React
 and the web platform give us great tools for managing those... expenses 🤑
