--- a/exercises/06.rerenders/03.solution.primitives/README.mdx
+++ b/exercises/06.rerenders/03.solution.primitives/README.mdx
@@ -1,4 +1,6 @@
 # Primitive Values
 
+<EpicVideo url="https://www.epicreact.dev/workshops/react-performance/primitives/solution" />
+
 👨‍💼 Great job! That's much better! We still get the perf benefits with `memo`
 without all the complexity of a custom comparator function.
