figure out how to track renders

--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -37,7 +37,9 @@ slower, so developing a good understanding of how things work is important.
 	A word of caution. It's easy to get carried away with performance
 	optimizations. Every optimization you make is a tradeoff (mostly in
 	complexity). It's important to measure the impact of your changes and to make
-	sure that the tradeoff is worth it. Don't optimize prematurely.
+	sure that the tradeoff is worth it. Sometimes you may inadvertenly make things
+	**slower** when applying a performance optimization! Don't optimize
+	prematurely.
 </callout-danger>
 
 With that, let's get started!
