🎶 add theme music

--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -43,3 +43,10 @@ slower, so developing a good understanding of how things work is important.
 </callout-danger>
 
 With that, let's get started!
+
+🎵 Check out the workshop theme song! 🎶
+
+<VideoEmbed
+	title="Epic React: React Performance Theme Song"
+	url="https://www.youtube.com/embed/gm2VVrk9Ues"
+/>
