more improved tests

--- a/exercises/06.rerenders/03.problem.primitives/README.mdx
+++ b/exercises/06.rerenders/03.problem.primitives/README.mdx
@@ -45,3 +45,9 @@ because a simple check with `===` will be enough.
 Let's do this for our `ListItem`.
 
 And make sure to check the before/after of your work!
+
+<callout-info>
+	🚨 There is no change in how many times the ListItem renders with this change
+	so the tests will be passing from the start. But you'll want to make sure the
+	tests continue to pass when you're finished.
+</callout-info>
