--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -48,5 +48,5 @@ With that, let's get started!
 
 <VideoEmbed
 	title="Epic React: React Performance Theme Song"
-	url="https://www.youtube.com/embed/gm2VVrk9Ues"
+	url="https://www.youtube.com/embed/gm2VVrk9Ues?list=PLV5CVI1eNcJieZkL_q7M48PwEpeNT-sL1&rel=0"
 />
